--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           </ul>
         </nav>
         <h1 class="site_title">Carlos Magalhães</h1>
-        <h2 class="site_subtitle">Jr. frontend developer</h2>
+        <h2 class="site_subtitle">Estudante.</h2>
     </hearder>
             
 </body>
